# MRHelper

./: CMakeLists.txt  Config.cmake.in  README.md
.github/workflows/: build.yml
examples/: CMakeLists.txt  example.cpp
include/MRHelper/: MapReduceTask.hpp  Scheduler.hpp  SimpleTask.hpp  Task.hpp  ThreadPool.hpp
src/: Scheduler.cpp  SimpleTask.cpp  Task.cpp  ThreadPool.cpp
tests/: CMakeLists.txt  tests.cpp
